Add wedding invitation

--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>모바일 청첩장</title>
-    <link rel="stylesheet" href="style.css">
+    <title>영준이 & 현민이 청첩장</title>
+    <style>
+        body {
+            text-align: center;
+            font-family: Arial, sans-serif;
+        }
+        .card {
+            max-width: 500px;
+            margin: auto;
+            padding: 20px;
+            border: 2px solid #ddd;
+            border-radius: 10px;
+            box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
+        }
+        .image {
+            max-width: 80%;
+            width: 300px; /* 원하는 크기로 조절 */
+            height: auto;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
-    <h1>우리 결혼해요!</h1>
-    <p>2026년 1월 10일 토요일 오후 4시 30분</p>
+    <div class="card"></div>
+        <img src="images/together.jpg" alt="Wedding Invitation" width="300">
+        <h1>우리 결혼해요!</h1>
+        <p>2026년 1월 10일 토요일 오후 4시 30분</p>
+        <img src="images/syj_temp.jpg" alt="Wedding Invitation" width="300">
+    </div>
 </body>
 </html>
