--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>영준이 & 현민이 청첩장</title>
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=fd7c0642089a172510c85073f9e3f1eb"></script>
     <style>
         body {
             text-align: center;
@@ -23,14 +24,42 @@
             height: auto;
             border-radius: 10px;
         }
+        #map {
+            width: 100%;
+            height: 300px; /* 지도의 높이 조절 가능 */
+            margin-top: 20px;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
-    <div class="card"></div>
-        <img src="images/together.jpg" alt="Wedding Invitation" width="300">
-        <h1>우리 결혼해요!</h1>
+
+    <div class="card">
+        <img class="image" src="images/together.jpg" alt="Wedding Invitation">
+        <h1>우리 결혼해요! 💍</h1>
         <p>2026년 1월 10일 토요일 오후 4시 30분</p>
-        <img src="images/syj_temp.jpg" alt="Wedding Invitation" width="300">
+
+        <!-- 지도 표시 영역 -->
+        <div id="map"></div>
+
+        <img class="image" src="images/syj_temp.jpg" alt="Wedding Invitation">
     </div>
+
+    <script>
+        var mapContainer = document.getElementById('map'),
+            mapOption = { 
+                center: new kakao.maps.LatLng(37.5158, 126.7225), // 웨딩홀 좌표 (예시)
+                level: 4 // 확대 수준
+            };
+
+        var map = new kakao.maps.Map(mapContainer, mapOption);
+
+        // 마커 추가
+        var marker = new kakao.maps.Marker({
+            position: map.getCenter()
+        });
+        marker.setMap(map);
+    </script>
+
 </body>
 </html>
